# TestCapitalCom

./: .gitignore  README.md  conf.py  conftest.py  environment.properties  index.html  pyproject.toml  pytest.ini
.github/workflows/: action.yml  exampl.yml  test_capital.yml  test_capital_com_for_macos_chrome.yml  test_capital_com_for_macos_safari.yml  test_capital_com_for_ubuntu_chrome.yml  test_capital_for_ubuntu.yml  tests.yml
.run/: capital_test (2).run.xml
1/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1/export/: influxDbData.txt  prometheusData.txt
1/history/: categories-trend.json  duration-trend.json  history.json
1/widgets/: behaviors.json  categories-trend.json  duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
10/data/: behaviors.csv  suites.csv  (+6 more)
capital/: base_page.py  capital.py  capital_locators.py  footer.py  header.py  signup_login_form.py  user_panel.py
config/: Impotant elements.html  PopUp_Login_SignUp.html  css_loc-s.html
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
pages/: base_page.py  capital.py  capital_locators.py  capital_page.py  conditions.py  country_and_licence.py  footer_element.py  header.py  header_element.py  locators.py  menu.py  menu_locators.py  signup_login.py  signup_login_form.py  src.py  user_panel.py
src/: src.py
tests/: capital1.py  capital2.py  capital_page_test.py  capital_test.py  conditions.py  conftest.py  hwinfo.py  oldconftest.py  test_capital_page.py
(+116824 files in other folders)
